Sillicon_BlazorApp_IA/Sillicon_BlazorApp_IA/wwwroot/app.css
/* ... */
.contact-wrap {
  height: 100vh;
  display: grid;
  grid-template-rows: auto auto auto;
}

.auth-wrap {
  height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.hidden {
  display: none !important;
}

.fixed-bottom {
  position: fixed;
  bottom: 0;
}

:root {
  --color-gray-000: #FFFFFF;
  --color-gray-100: #F3F6FF;
  --color-gray-200: #EFF2FC;
  --color-gray-300: #E2E5F1;
  --color-gray-400: #D4D7E5;
  --color-gray-500: #B4B7C9;
  --color-gray-600: #9397AD;
  --color-gray-700: #565973;
  --color-gray-800: #33354D;
  --color-gray-900: #0B0F19;
  --color-white: #FFFFFF;
  --color-black: #000000;
  --color-gray: #B4B7C9;
  --color-danger: #EF4444;
  --color-danger-bg: #EF444420;
  --color-success: #22C55E;
  --color-success-bg: #22C55E20;
  --color-warning: #FFBA08;
  --color-info: #4C82F7;
  --color-theme: #6366F1;
  --color-transparent: transparent;
  --color-theme-secondary: #8B5CF6;
  --color-theme-opacity: #6365f114;
  --color-theme-gradient: linear-gradient(90deg, #6366F1 0%, #8B5CF6 50%, #D946EF 100%);
  --color-theme-gradient-background: linear-gradient(-1deg, rgba(99, 101, 241, 0.10) 0%, rgba(216, 70, 239, 0.05) 45%, rgba(241, 244, 253, 0.07) 75%);
  --font-manrope: "Manrope", sans-serif;
}

:root.dark {
  --color-gray-000: #0B0F19;
  --color-gray-100: #13161D;
  --color-gray-200: #1C1F26;
  /*   --color-gray-alt100: #565973;
     --color-gray-alt200: #33354D;*/
  --color-gray-300: #9397AD;
  --color-gray-400: #B4B7C9;
  --color-gray-500: #D4D7E5;
  --color-gray-600: #E2E5F1;
  --color-gray-700: #EFF2FC;
  --color-gray-800: #F3F6FF;
  --color-gray-900: #FFFFFF;
  --color-white: #FFFFFF;
  --color-black: #000000;
  --color-gray: #B4B7C9;
  --color-danger: #EF4444;
  --color-danger-bg: #EF444420;
  --color-success: #22C55E;
  --color-success-bg: #22C55E20;
  --color-warning: #FFBA08;
  --color-info: #4C82F7;
  --color-theme: #6366F1;
  --color-transparent: transparent;
  --color-theme-secondary: #8B5CF6;
  --color-theme-opacity: #6365f114;
  --color-theme-gradient: linear-gradient(90deg, #6366F1 0%, #8B5CF6 50%, #D946EF 100%);
  --color-theme-gradient-background: linear-gradient(-1deg, rgba(99, 101, 241, 0.10) 0%, rgba(216, 70, 239, 0.05) 45%, rgba(241, 244, 253, 0.07) 75%);
  --font-manrope: "Manrope", sans-serif;
}

.breadcrumb {
  margin: 1rem 0;
}
.breadcrumb ol {
  display: flex;
  align-items: baseline;
  gap: 0.6rem;
}
.breadcrumb ol i {
  color: var(--color-gray-600);
}
.breadcrumb ol li {
  padding: 0.2rem;
}
.breadcrumb ol li a {
  color: var(--color-gray-600);
}
.breadcrumb ol .active {
  margin-left: -0.5rem;
}
.breadcrumb ol .active a {
  color: var(--color-theme);
}
.breadcrumb ol .breadcrumb-item + .breadcrumb-item::before ::after {
  /*                    color: var(--color-gray-900) !important;
  */
  color: red !important;
}

.btn-theme {
  border-radius: 6px;
  text-align: center;
  font-size: 14px;
  padding: 8px 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  background: var(--color-theme);
  color: var(--color-white);
  border: none;
}
.btn-theme:hover {
  text-decoration: none;
  background: var(--color-gray-700);
  color: var(--color-gray-000);
}

.btn-theme-s {
  border-radius: 6px;
  text-align: center;
  font-size: 14px;
  padding: 8px 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
  background: var(--color-theme);
  color: var(--color-white);
  padding-top: 10px;
  padding-bottom: 13px;
}
.btn-theme-s:hover {
  box-shadow: 0px 8px 18px -8px rgba(19, 16, 34, 0.15);
  text-decoration: none;
  background: var(--color-gray-700);
  color: var(--color-gray-000);
}

.btn-gray {
  border-radius: 6px;
  text-align: center;
  font-size: 14px;
  padding: 8px 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  background: var(--color-gray-200);
  color: var(--color-gray-800);
  border: none;
}
.btn-gray:hover {
  text-decoration: none;
  background: var(--color-gray-700);
  color: var(--color-gray-000);
}
.btn-gray .sign-in {
  rotate: 270deg;
}

.btn-switch {
  display: flex;
  align-items: center;
  gap: 10px;
}
.btn-switch label {
  line-height: 160%;
  font-weight: 400;
  color: var(--color-gray-700);
  font-family: var(--font-manrope);
  font-size: 1rem;
  color: var(--color-gray-800);
  font-weight: 600 !important;
}
.btn-switch .switch {
  position: relative;
  display: inline-block;
  width: 46px;
  height: 25px;
}
.btn-switch .switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
.btn-switch .switch input:checked + .slider {
  background-color: var(--color-theme);
}
.btn-switch .switch input:focus + .slider {
  box-shadow: 0 0 1px var(--color-theme);
}
.btn-switch .switch input:checked + .slider:before {
  transform: translateX(20px);
  background-color: var(--color-white);
}
.btn-switch .switch .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--color-gray-700);
  transition: 0.4s;
}
.btn-switch .switch .slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 3px;
  bottom: 2.7px;
  background-color: var(--color-white);
  transition: 0.4s;
}
.btn-switch .switch .slider.round {
  border-radius: 34px;
}
.btn-switch .switch .slider.round:before {
  border-radius: 50%;
}

.btn-social {
  line-height: 160%;
  font-weight: 400;
  color: var(--color-gray-700);
  font-family: var(--font-manrope);
  font-size: 1.25rem !important;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  width: 44px;
  height: 44px;
  background-color: var(--color-gray-200);
  color: var(--color-gray-800);
}
.btn-social:hover {
  text-decoration: none;
  background: var(--color-gray-700);
  color: var(--color-gray-000);
}
/* ... */

